tests/baselines/reference/VariableDeclaration2_es6.errors.txt
tests/cases/conformance/es6/variableDeclarations/VariableDeclaration2_es6.ts(1,7): error TS1155: 'const' declarations must be initialized.


==== tests/cases/conformance/es6/variableDeclarations/VariableDeclaration2_es6.ts (1 errors) ====
    const a
          ~
!!! error TS1155: 'const' declarations must be initialized.